mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey.db
spec:
  ports:
    - name: mysql-svc
      port: 6449
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
