surveyanswer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveyanswer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surveyanswer
  template:
    metadata:
      labels:
        app: surveyanswer
    spec:
      # initContainers:
      #   - name: wait-for-surveydocument
      #     image: busybox
      #     command: ['sh', '-c', 'until ping surveydocument-service; do echo waiting for surveydocument; sleep 2; done;']
      containers:
        - name: surveyanswer
          image: hamgeonwook/surveyanswer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: surveyanswer-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: surveyanswer
