surveydocument.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveydocument
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surveydocument
  template:
    metadata:
      labels:
        app: surveydocument
    spec:
      # initContainers:
      #   - name: wait-for-mysql
      #     image: busybox
      #     command: ['sh', '-c', 'until nslookup mysql:3306; do echo waiting for myweb-mysql; sleep 2; done;'] 
      containers:
        - name: surveydocument
          image: hamgeonwook/surveydocument:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: surveydocument-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: surveydocument
