user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveyanalyze
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surveyanalyze
  template:
    metadata:
      labels:
        app: surveyanalyze
    spec:
      # initContainers:
      #   - name: wait-for-surveyanswer
      #     image: busybox
      #     command: ['sh', '-c', 'until nslookup surveyanswer-service; do echo waiting for surveyanswer; sleep 2; done;']
      containers:
        - name: surveyanalyze
          image: hamgeonwook/surveyanalyze:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: surveyanalyze-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: surveyanalyze
